updated create user page and added JS to load robogotchi picture based on input

--- a/views/login.html
+++ b/views/login.html
@@ -29,7 +29,7 @@
             <div class="card col-7 border-0">
                 <div class="card-body">
                     <h5 class="card-title text-center">Login to view your 'Gotchi</h5>
-                    <form class="">
+                    <form class="login">
                         <div class="form-group">
                             <label for="email">Email</label>
                             <input type="email" class="form-control" id="email" aria-describedby="emailHelp"
