updated login with JS

--- a/views/login.html
+++ b/views/login.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>login | robogotchi</title>
-    <link rel="stylesheet" href="styles/reset.css">
+    <!-- <link rel="stylesheet" href="styles/reset.css"> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="js/login.js"></script>
+    <!-- <script src="js/login.js"></script> -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles/styles.css">
+    <!-- <link rel="stylesheet" href="styles/styles.css"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -40,6 +40,9 @@
                         <div class="form-group">
                             <label for="password">Password</label>
                             <input type="password" class="form-control" id="password" placeholder="Password">
+                        </div>
+                        <div style="display: none" id="alert" class="alert alert-danger" role="alert">
+                            <span class="sr-only">Error:</span> <span class="msg"></span>
                         </div>
                         <div class="form-group d-flex justify-content-center">
                             <button type="submit" class="btn btn-success">Log in!</button>
