--- a/views/login.html
+++ b/views/login.html
@@ -30,13 +30,10 @@
             <div class="card col-7 border-0">
                 <div class="card-body">
                     <h5 class="card-title text-center">Login to view your 'Gotchi</h5>
-                    <form class="login">
+                    <form class="login" method="POST" action="/signup">
                         <div class="form-group">
-                            <label for="email">Email</label>
-                            <input type="email" class="form-control" id="email" aria-describedby="emailHelp"
-                                placeholder="Enter email">
-                            <small id="emailHelp" class="form-text text-muted">Your email address <em>is</em> your
-                                username</small>
+                            <label for="username">Username</label>
+                            <input type="username" class="form-control" id="username" placeholder="Username">
                         </div>
                         <div class="form-group">
                             <label for="password">Password</label>
