--- a/views/signup.html
+++ b/views/signup.html
@@ -51,20 +51,20 @@
                             <label for="name">What is your username?</label>
                             <div class="form-group">
                                 <label for="username">Username</label>
-                                <input type="username" class="form-control" name="username" placeholder="Username">
+                                <input type="username" class="form-control" name="username" id="username" placeholder="Username">
                             </div>
                         </div>
                         <div class="form-group">
                             <label for="email">Email</label>
-                            <input type="email" class="form-control" name="email" aria-describedby="emailHelp" placeholder="Enter email">
+                            <input type="email" class="form-control" name="email" id="email" aria-describedby="emailHelp" placeholder="Enter email">
                         </div>
                         <div class="form-group">
                             <label for="password">Password</label>
-                            <input type="password" class="form-control" name="password" placeholder="Password">
+                            <input type="password" class="form-control" name="password" id="password" placeholder="Password">
                         </div>
                         <div class="form-group">
                             <label for="password-check">Re-Enter Password</label>
-                            <input type="password" class="form-control" id="password-check" placeholder="Password">
+                            <input type="password" class="form-control" name="password-check" id="password-check" placeholder="Password">
                         </div>
                         <div style="display: none" id="alert" class="alert alert-danger" role="alert">
                             <span class="sr-only">Error:</span> <span class="msg"></span>
