create passport username object

--- a/views/signup.html
+++ b/views/signup.html
@@ -46,7 +46,7 @@
             <div class="card col-7 border-0">
                 <div class="card-body">
                     <h5 class="card-title text-center mb-4">Fill out all inputs to create an account</h5>
-                    <form class="sign-up" method="POST" action="/signup">
+                    <form class="sign-up">
                         <div class="form-group">
                             <label for="name">What is your username?</label>
                             <div class="form-group">
