--- a/views/signup.html
+++ b/views/signup.html
@@ -5,7 +5,7 @@
     <title>Create Account | robogotchi</title>
     <link rel="stylesheet" href="styles/reset.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="js/login.js"></script>
+    <script src="js/signup.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
