--- a/views/login.html
+++ b/views/login.html
@@ -30,7 +30,7 @@
             <div class="card col-7 border-0">
                 <div class="card-body">
                     <h5 class="card-title text-center">Login to view your 'Gotchi</h5>
-                    <form class="login" method="POST" action="/signup">
+                    <form class="login">
                         <div class="form-group">
                             <label for="username">Username</label>
                             <input type="username" class="form-control" id="username" placeholder="Username">
