--- a/views/signup.html
+++ b/views/signup.html
@@ -15,6 +15,7 @@
     <!-- Placeholder navbar -->
     <nav class="navbar navbar-light bg-light mb-4">
         <span class="navbar-brand mb-0 h1">Killer Mutant Robogotchis!!!!</span>
+        <span><a id="login" href="/login">Already a User?</a></span>
     </nav>
     <div class="container">
         <div class="row">
