--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,7 @@
 <!-- Placeholder navbar -->
 <nav class="navbar navbar-light bg-light mb-4">
     <span class="navbar-brand mb-0 h1">Killer Mutant Robogotchis!!!!</span>
+    <span><a id="logout" href="/logout">Logout</a></span>
 </nav>
 
 <div class="container">
