--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,9 +10,11 @@
         <div class="card col-5 border-0">
             <div class="card-body character-card">
                 <h5 class="card-title text-center">Your 'Gotchi</h5>
-                <h4>users gotchi name will go here</h4>
+                <h4>Your Gotchi: </h4>
+                <span>{{gotchiName}}</span>
                 <!-- this will be the image of the character chosen by user -->
                 <div class="text-center mb-3" style="height: 250px">
+                    <span>{{gotchiPicture}}</span>
                     <img src="https://via.placeholder.com/250" class="img-fluid rounded" id="gotchi-img">
                 </div>
             </div>
