--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,4 +12,11 @@
   {{{body}}}
 </body>
 
+<!-- Jquery -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" ></script>
+<!-- Javascript -->
+<script src="/public/js/index.js"></script>
+
 </html>
