--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,34 +1,35 @@
-<!-- Placeholder navbar -->
+<script src="js/index.js"></script>
+{{!-- navbar --}}
 <nav class="navbar navbar-light bg-light mb-4">
     <span class="navbar-brand mb-0 h1">Killer Mutant Robogotchis!!!!</span>
     <span><a id="logout" href="/logout">Logout</a></span>
 </nav>
 
 <div class="container">
-    <!-- your character card -->
+
+    {{!-- Your character card --}}
     <div class="row">
         <div class="card col-5 border-0">
             <div class="card-body character-card">
                 <h5 class="card-title text-center">Your 'Gotchi</h5>
                 <h4>Your Gotchi: </h4>
                 <span>{{gotchiName}}</span>
-                <!-- this will be the image of the character chosen by user -->
                 <div class="text-center mb-3" style="height: 250px">
                     <img src="{{gotchiPicture}}" class="img-fluid rounded" id="gotchi-img">
                 </div>
             </div>
         </div>
 
-        <!-- stats card -->
+        {{!-- stats card --}}
         <div class="card col-5 border-0">
             <div class="card-body stat-card">
-                <h5 class="card-title text-center">What would you like to do with your Robot?</h5>
+                <h5 class="card-title text-center">What would you like to do with your Gotchi?</h5>
                 <div class="list-group">
-                    <button type="button" class="list-group-item list-group-item-action" id="feedBtn"
+                    <button data-points={{hungry}} data-id={{id}} name="hungry" value=5 type="button" class="list-group-item list-group-item-action action-btn" id="feedBtn"
                         data-toggle="modal" data-target="#modal">Feed</button>
-                    <button type="button" class="list-group-item list-group-item-action" id="entertainBtn"
+                    <button data-points={{bored}} data-id={{id}} name="bored" value=20 type="button" class="list-group-item list-group-item-action action-btn" id="entertainBtn"
                         data-toggle="modal" data-target="#modal2">Entertain</button>
-                    <button type="button" class="list-group-item list-group-item-action" id="exerciseBtn"
+                    <button data-points={{lazy}} data-id={{id}} name="lazy" value=15 type="button" class="list-group-item list-group-item-action action-btn" id="exerciseBtn"
                         data-toggle="modal" data-target="#modal3">Exercise</button>
 
 
@@ -36,7 +37,7 @@
             </div>
         </div>
 
-        <!-- food modal -->
+        {{!-- food modal --}}
         <div class="modal" id="modal" tabindex="-1" role="dialog">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
@@ -47,7 +48,7 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <p>Your Gotchi has {{hungry}} food points</p>
+                        <p>Your Gotchi has <span id="hungry-points"></span> food points</p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -56,7 +57,7 @@
             </div>
         </div>
 
-        <!-- entertain modal -->
+        {{!-- Entertainment modal --}}
         <div class="modal" id="modal2" tabindex="-1" role="dialog">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
@@ -67,7 +68,7 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <p>Your Gotchi has {{bored}} entertainment points</p>
+                        <p>Your Gotchi has <span id="bored-points"></span> entertainment points</p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -76,8 +77,8 @@
             </div>
         </div>
 
-        <!-- exercise modal -->
-              <div class="modal" id="modal3" tabindex="-1" role="dialog">
+        {{!-- Exercise modal --}}
+        <div class="modal" id="modal3" tabindex="-1" role="dialog">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -87,7 +88,7 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <p>Your Gotchi has {{lazy}} exercise points</p>
+                        <p>Your Gotchi has <span id="lazy-points"></span> exercise points</p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -96,3 +97,4 @@
             </div>
         </div>
     </div>
+</div>
