signup validation errors working

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -61,7 +61,7 @@
                     </div>
                     {{#if errors}}
                         {{#each errors}}
-                            <p class="alert alert-danger">{{ this.msg }}</p>
+                            <p class="alert alert-danger" id="error-text">{{ this.msg }}</p>
                         {{/each}}
                     {{/if}}
                     <div class="form-group d-flex justify-content-center">
