--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -10,6 +10,10 @@
   border: 2px solid rgb(3, 59, 3);
 }
 
+/*------------------------------------*/
+/* Nav bar style */
+/*------------------------------------*/
+
 .navbar a {
   color: black;
   transition: all 0.25s;
@@ -20,3 +24,83 @@
   text-decoration: none;
 }
 
+.nav-head {
+  font-family: 'Russo One', sans-serif;
+}
+
+.navbar-light .navbar-brand {
+  color: white !important;
+  font-size: 32px;
+  padding: 10px;
+  text-shadow: 4px 2px #1a5cb1;
+  margin-left: 80px;
+
+}
+
+.bg-light {
+  background-color: rgba(0, 0, 0, 0.568)!important;
+}
+
+.sign-up-card {
+  margin-right: 50px;
+}
+
+.card {
+  font-family: 'Russo One', sans-serif;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.568);
+}
+
+.sign-up {
+  border: none !important;
+}
+
+/*------------------------------------*/
+/* video style */
+/*------------------------------------*/
+
+#myVid {
+  right: 0;
+  bottom: 0;
+  width: 100%; 
+  height: 100%;
+  object-fit: contain;
+  z-index: -1;
+}
+
+#video-box {
+  float: left;
+}
+
+#video-overlays {
+    position:absolute;
+    float:left;
+    width:640px;
+    min-height:370px;
+    background-color:#000;
+
+}
+
+.content {
+  top: 0;
+  position: absolute;
+  width: 100%;
+}
+
+/*------------------------------------*/
+/* button style */
+/*------------------------------------*/
+
+.btn-success {
+  color:#02187a;
+  background-color: #4afdfe;
+  border-color: #1a5cb1;
+}
+
+.btn-success:hover {
+  color: white;
+  background-color: #1a5cb1;
+  border: none;
+  box-shadow: 3px 3px 4px #4afdfe;
+
+}
