--- a/views/signup.html
+++ b/views/signup.html
@@ -35,7 +35,7 @@
                         </div>
                         <!-- placeholder image -->
                         <div class="text-center mb-3" style="height: 250px">
-                            <img src="https://via.placeholder.com/250" class="img-fluid rounded" id="gotchi-img">
+                            <img src="/public/images/robot-placeholder.jpg" class="img-fluid rounded" id="gotchi-img">
                         </div>
                         <div class="form-group">
                             <label for="gotchi-name">Name your 'Gotchi</label>
