--- a/views/login.html
+++ b/views/login.html
@@ -5,67 +5,76 @@
 <head>
     <meta charset="UTF-8">
     <title>login | robogotchi</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <!-- <script src="js/login.js"></script> -->
+
+    <!-- Styles -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="/styles/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Russo+One&display=swap" rel="stylesheet">
+
+    <!-- scripts -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="js/login.js"></script>
+
 </head>
 
 <body>
     <!-- Background Video -->
-    <div id="wrap-video">
-        <div id="video_box">
-            <div id="video_overlays"></div>
-            <div>
-                <video autoplay muted loop id="myVid">
-                    <source src="/images/Optimized_Bite_Rain.mp4" type="video/mp4">
-                </video>
-            </div>
 
-            <div class="content">
-                <!-- Placeholder navbar -->
-                <nav class="navbar navbar-light bg-light mb-4">
-                    <span class="navbar-brand mb-0 h1 nav-head">Killer Mutant Robogotchis!!!!</span>
-                </nav>
-                <div class="container">
-                    <div class="row">
-                        <!-- sign up card -->
-                        <div class="card col-5 border-0 sign-up-card">
-                            <div class="card-body d-flex flex-wrap align-content-between m-5 sign-up">
-                                <h3 class="card-title text-center mt-5 w-100">Sign Up!</h3>
-                                <a href="/signup" class="btn btn-success w-50 mx-auto mb-3" role="button">Sign Up!</a>
+    <video autoplay muted loop id="myVid">
+        <source src="/images/Optimized_Bite_Rain.mp4" type="video/mp4">
+    </video>
+
+    <!-- Video end -->
+
+    <!-- content wrapper to style around video -->
+    <div class="content">
+
+        <!-- Placeholder navbar -->
+        <nav class="navbar navbar-light bg-light mb-4">
+            <span class="navbar-brand mb-0 h1 nav-head">Killer Mutant Robogotchis!!!!</span>
+        </nav>
+        <div class="container">
+            <div class="row">
+
+                <!-- sign up card -->
+                <div class="card col-5 border-0 sign-up-card">
+                    <div class="card-body d-flex flex-wrap align-content-between m-5 sign-up">
+                        <h3 class="card-title text-center mt-5 w-100">Sign Up!</h3>
+                        <a href="/signup" class="btn btn-success w-50 mx-auto mb-3" role="button">Sign Up!</a>
+                    </div>
+                </div>
+
+                <!-- login card -->
+                <div class="card col-6 border-0">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">Login to view your 'Gotchi</h5>
+                        <form class="login">
+                            <div class="form-group">
+                                <label for="username">Username</label>
+                                <input type="username" class="form-control" id="username" placeholder="Username">
                             </div>
-                        </div>
-                        <!-- login card -->
-                        <div class="card col-6 border-0">
-                            <div class="card-body">
-                                <h5 class="card-title text-center">Login to view your 'Gotchi</h5>
-                                <form class="login">
-                                    <div class="form-group">
-                                        <label for="username">Username</label>
-                                        <input type="username" class="form-control" id="username"
-                                            placeholder="Username">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="password">Password</label>
-                                        <input type="password" class="form-control" id="password"
-                                            placeholder="Password">
-                                    </div>
-                                    <div style="display: none" id="alert" class="alert alert-danger" role="alert">
-                                        <span class="sr-only">Error:</span> <span class="msg"></span>
-                                    </div>
-                                    <div class="form-group d-flex justify-content-center">
-                                        <button type="submit" class="btn btn-success">Log in!</button>
-                                    </div>
-                                </form>
+                            <div class="form-group">
+                                <label for="password">Password</label>
+                                <input type="password" class="form-control" id="password" placeholder="Password">
                             </div>
-                        </div>
+                            <div style="display: none" id="alert" class="alert alert-danger" role="alert">
+                                <span class="sr-only">Error:</span> <span class="msg"></span>
+                            </div>
+                            <div class="form-group d-flex justify-content-center">
+                                <button type="submit" class="btn btn-success">Log in!</button>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
+        </div>
+        <!-- Container end -->
+    </div>
+    <!-- Content wrapper end -->
+
 
 </body>
 
