--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,13 +12,20 @@
     {{!-- Google Fonts --}}
     <link href="https://fonts.googleapis.com/css?family=Russo+One&display=swap" rel="stylesheet">
     <title>Killer Mutant Robogotchis!!!!</title>
-    <!-- Jquery -->
-    <script src="https://code.jquery.com/jquery-3.4.1.js"
-        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
 </head>
 
 <body>
+      {{!-- Background video --}}
+    <video autoplay muted loop id="myVid">
+        <source src="/images/Optimized_Bite_Rain.mp4" type="video/mp4">
+    </video>
+    {{!-- Video end --}}
+    
+    <div class="content">
     {{{body}}}
+    </div>
+  
+
 
     {{!-- Moment --}}
     <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
@@ -27,15 +34,14 @@
         integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <!-- Jquery -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     {{!-- Scripts --}}
     <script src="js/index.js"></script>
 </body>
 
-<!-- Jquery -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" ></script>
-<!-- Javascript -->
-<script src="/public/js/index.js"></script>
+
 
 </html>
