--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,7 +2,7 @@
 
 {{!-- Navbar Start --}}
 <nav class="navbar navbar-light bg-light mb-4">
-    <span class="navbar-brand mb-0 h1">Killer Mutant Robogotchis!!!!</span>
+    <span class="navbar-brand mb-0 h1 nav-head">Killer Mutant Robogotchis!!!!</span>
     <span><a id="logout" href="/logout">Logout</a></span>
 </nav>
 {{!-- Navbar End --}}
@@ -12,11 +12,10 @@
 
         {{!-- Character Card Start--}}
         <div class="card col-5 border-0">
-            <div class="card-body character-card">
-                <h5 class="card-title text-center">Your 'Gotchi</h5>
-                <h4>Your Gotchi: </h4>
+            <div class="card-body">
+                <h3 class="card-title text-center">Your 'Gotchi</h3>
                 <span>{{dataValues.gotchiName}}</span>
-                <div class="text-center mb-3" style="height: 250px">
+                <div class="text-center mb-3">
                     <img src="{{dataValues.gotchiPicture}}" class="img-fluid rounded" id="gotchi-img">
                 </div>
             </div>
@@ -25,17 +24,17 @@
 
 
         {{!-- Stats Card Start --}}
-        <div class="card col-5 border-0">
-            <div class="card-body stat-card">
-                <h5 class="card-title text-center">What would you like to do with your Robot?</h5>
+        <div class="card col-6 border-0 ml-auto">
+            <div class="card-body">
+                <h5 class="card-title text-center">What would you like to do with your Gotchi?</h5>
                 <div class="list-group">
-                    <button data-points="{{hungry}}" data-id="{{id}}" data-name="hungry" value=5 type="button"
+                    <button data-health="{{dataValues.health}}" data-points="{{dataValues.hungry}}" data-id="{{dataValues.id}}" name="hungry" value=5 type="button"
                     class="list-group-item list-group-item-action action-btn" id="feedBtn" data-toggle="modal"
-                        data-target="#modal">Feed</button>
-                    <button data-points="{{bored}}" data-id="{{id}}" name="bored" value=20 type="button"
+                        data-target="#modal">Food Supply</button>
+                    <button data-health="{{dataValues.health}}" data-points="{{dataValues.bored}}" data-id="{{dataValues.id}}" name="bored" value=15 type="button"
                         class="list-group-item list-group-item-action action-btn" id="entertainBtn" data-toggle="modal"
                         data-target="#modal2">Entertain</button>
-                    <button data-points="{{lazy}}" data-id="{{id}}" name="lazy" value=15 type="button"
+                    <button data-health="{{dataValues.health}}" data-points="{{dataValues.lazy}}" data-id="{{dataValues.id}}" name="lazy" value=20 type="button"
                         class="list-group-item list-group-item-action action-btn" id="exerciseBtn" data-toggle="modal"
                         data-target="#modal3">Exercise</button>
                 </div>
@@ -55,7 +54,7 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <p>Your Gotchi has <span id="hungry-points">{{dataValues.hungry}}</span> food points</p>
+                        <p>Your Gotchi has <span id="hungry-points">{{dataValues.hungry}}</span> food remaining</p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -110,4 +109,7 @@
 
     </div>
 </div>
+
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="/js/index.js"></script>
 
