--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,99 +1,84 @@
-{{!-- Background video --}}
+{{!-- Navbar Start --}}
+<nav class="navbar navbar-light bg-light mb-4">
+    <span class="navbar-brand mb-0 h1 nav-head">Killer Mutant Robogotchis!!!!</span>
+    <span><a id="login" href="/login">Already a User?</a></span>
+</nav>
+{{!-- Navbar End --}}
 
-            <video autoplay muted loop id="myVid">
-                <source src="/images/Optimized_Bite_Rain.mp4" type="video/mp4">
-            </video>
+{{!-- Main Container Start --}}
+<div class="container">
+    <div class="row">
 
-        {{!-- Video end --}}
-
-        {{!-- Content wrapper to style around video --}}
-        <div class="content">
-
-            {{!-- Navbar Start --}}
-            <nav class="navbar navbar-light bg-light mb-4">
-                <span class="navbar-brand mb-0 h1 nav-head">Killer Mutant Robogotchis!!!!</span>
-                <span><a id="login" href="/login">Already a User?</a></span>
-            </nav>
-            {{!-- Navbar End --}}
-
-            {{!-- Main Container Start --}}
-            <div class="container">
-                <div class="row">
-
-                    {{!-- Build Gotchi Start --}}
-                    <div class="card col-5 border-0">
-                        <div class="card-body character-card">
-                            <h5 class="card-title text-center">Your 'Gotchi</h5>
-                            <form class="gotchi">
-                                <div class="form-group">
-                                    <select class="custom-select">
-                                        <option selected>Select Your Character Class</option>
-                                        <option value="robot">Robot</option>
-                                        <option value="alien">Alien</option>
-                                        <option value="human">Human</option>
-                                    </select>
-                                </div>
-                                <div class="text-center mb-3">
-                                    <img src="/images/robot-placeholder.jpg" class="img-fluid rounded" id="gotchi-img">
-                                </div>
-                                <div class="form-group">
-                                    <label for="gotchi-name">Name your 'Gotchi</label>
-                                    <input type="text" class="form-control" id="gotchi-name"
-                                        placeholder="Name that 'Gotchi">
-                                </div>
-                            </form>
-                        </div>
+        {{!-- Build Gotchi Start --}}
+        <div class="card col-5 border-0">
+            <div class="card-body character-card">
+                <h5 class="card-title text-center">Your 'Gotchi</h5>
+                <form class="gotchi">
+                    <div class="form-group">
+                        <select class="custom-select">
+                            <option selected>Select Your Character Class</option>
+                            <option value="robot">Robot</option>
+                            <option value="alien">Alien</option>
+                            <option value="human">Human</option>
+                        </select>
                     </div>
-                    {{!-- Build Gotchi End --}}
-
-                    {{!-- Signup Card Start --}}
-                    <div class="card col-7 border-0">
-                        <div class="card-body">
-                            <h5 class="card-title text-center mb-4">Fill out all inputs to create an account</h5>
-                            <form class="sign-up">
-                                <div class="form-group">
-                                    <label for="name"></label>
-                                    <div class="form-group">
-                                        <label for="username">Username</label>
-                                        <input type="username" class="form-control" name="username" id="username"
-                                            placeholder="Username">
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label for="email">Email</label>
-                                    <input type="email" class="form-control" name="email" id="email"
-                                        aria-describedby="emailHelp" placeholder="Enter email">
-                                </div>
-                                <div class="form-group">
-                                    <label for="password">Password</label>
-                                    <input type="password" class="form-control" name="password" id="password"
-                                        placeholder="Password">
-                                </div>
-                                <div class="form-group">
-                                    <label for="password-check">Re-Enter Password</label>
-                                    <input type="password" class="form-control" name="password-check"
-                                        id="password-check" placeholder="Re-Enter Password">
-                                </div>
-                                {{#if errors}}
-                                {{#each errors}}
-                                <p class="alert alert-danger" id="error-text">{{ this.msg }}</p>
-                                {{/each}}
-                                {{/if}}
-                                <div class="form-group d-flex justify-content-center">
-                                    <button type="submit" class="btn btn-success">Create Account!</button>
-                                </div>
-                            </form>
-                        </div>
+                    <div class="text-center mb-3">
+                        <img src="/images/robot-placeholder.jpg" class="img-fluid rounded" id="gotchi-img">
                     </div>
-                    {{!-- Signup Card End --}}
-
-                </div>
+                    <div class="form-group">
+                        <label for="gotchi-name">Name your 'Gotchi</label>
+                        <input type="text" class="form-control" id="gotchi-name" placeholder="Name that 'Gotchi">
+                    </div>
+                </form>
             </div>
-            {{!-- Main Container End --}}
-
         </div>
-        {{!-- Content end --}}
+        {{!-- Build Gotchi End --}}
 
-        {{!-- Scripts --}}
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="/js/signup.js"></script>
+        {{!-- Signup Card Start --}}
+        <div class="card col-7 border-0">
+            <div class="card-body">
+                <h5 class="card-title text-center mb-4">Fill out all inputs to create an account</h5>
+                <form class="sign-up">
+                    <div class="form-group">
+                        <label for="name"></label>
+                        <div class="form-group">
+                            <label for="username">Username</label>
+                            <input type="username" class="form-control" name="username" id="username"
+                                placeholder="Username">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="email" class="form-control" name="email" id="email" aria-describedby="emailHelp"
+                            placeholder="Enter email">
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Password</label>
+                        <input type="password" class="form-control" name="password" id="password"
+                            placeholder="Password">
+                    </div>
+                    <div class="form-group">
+                        <label for="password-check">Re-Enter Password</label>
+                        <input type="password" class="form-control" name="password-check" id="password-check"
+                            placeholder="Re-Enter Password">
+                    </div>
+                    {{#if errors}}
+                    {{#each errors}}
+                    <p class="alert alert-danger" id="error-text">{{ this.msg }}</p>
+                    {{/each}}
+                    {{/if}}
+                    <div class="form-group d-flex justify-content-center">
+                        <button type="submit" class="btn btn-success">Create Account!</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+        {{!-- Signup Card End --}}
+
+    </div>
+</div>
+{{!-- Main Container End --}}
+
+{{!-- Scripts --}}
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="/js/signup.js"></script>
