login validation errors / signup redirect bug still issue

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -22,7 +22,6 @@
         </div>
         {{!-- Character Card End--}}
 
-
         {{!-- Stats Card Start --}}
         <div class="card col-5 border-0">
             <div class="card-body stat-card">
@@ -35,7 +34,6 @@
             </div>
         </div>
         {{!-- Stats Card End --}}
-
 
         {{!-- Food Modal Start --}}
         <div class="modal" id="modal" tabindex="-1" role="dialog">
@@ -79,7 +77,6 @@
         </div>
         {{!-- Entertainment Modal End --}}
 
-
         {{!-- Exercise Modal Start --}}
         <div class="modal" id="modal3" tabindex="-1" role="dialog">
             <div class="modal-dialog" role="document">
@@ -105,4 +102,5 @@
 </div>
 
 {{!-- Scripts --}}
-<script src="js/index.js"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="/js/index.js"></script>
