--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -24,7 +24,7 @@
                         </select>
                     </div>
                     <div class="text-center mb-3" style="height: 250px">
-                        <img src="https://via.placeholder.com/250" class="img-fluid rounded" id="gotchi-img">
+                        <img src="https://via.placeholder.com/250" class="img-fluid rounded" name="gotchiImg" id="gotchi-img">
                     </div>
                     <div class="form-group">
                         <label for="gotchi-name">Name your 'Gotchi</label>
@@ -77,4 +77,5 @@
 {{!-- Main Container End --}}
 
 {{!-- Scripts --}}
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script><script src="/js/signup.js"></script>
 <script src="/js/signup.js"></script>
