--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,25 +4,23 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     {{!-- Styles --}}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="/styles/styles.css" media="screen" title="no title" charset="utf-8">
-
     {{!-- Google Fonts --}}
     <link href="https://fonts.googleapis.com/css?family=Russo+One&display=swap" rel="stylesheet">
     <title>Killer Mutant Robogotchis!!!!</title>
 </head>
 
 <body>
-      {{!-- Background video --}}
+    {{!-- Background Vid Start --}}
     <video autoplay muted loop id="myVid">
         <source src="/images/Optimized_Bite_Rain.mp4" type="video/mp4">
     </video>
-    {{!-- Video end --}}
+    {{!-- Background Vid End --}}
     
     <div class="content">
-    {{{body}}}
+        {{{body}}}
     </div>
   
 
@@ -30,8 +28,7 @@
     {{!-- Moment --}}
     <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
     {{!-- Scripts --}}
-    <script src="https://code.jquery.com/jquery-3.4.1.js"
-        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <!-- Jquery -->
