--- a/views/login.html
+++ b/views/login.html
@@ -30,8 +30,10 @@
     <div class="content">
 
         <!-- Placeholder navbar -->
-        <nav class="navbar navbar-light bg-light mb-4">
-            <span class="navbar-brand mb-0 h1 nav-head">Killer Mutant Robogotchis!!!!</span>
+        <nav class="navbar mb-4">
+            <img class="navbar-logo" src="/images/logo.png" alt="Robogotchi Logo">
+            <span class="navbar-brand">Killer Mutant Robogotchis!!!!</span>
+            <a id="login" href="/login">Already a User?</a>
         </nav>
         <div class="container">
             <div class="row">
