--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -11,41 +11,46 @@
 } */
 
 /*------------------------------------*/
-/* Nav bar style */
+/* Navbar Style */
 /*------------------------------------*/
 .navbar {
   justify-content: space-around;
+  background-color: rgba(0, 0, 0, 0.568)!important;
+
 }
-.navbar a {
+
+.navbar-logo {
+  width: 200px;
+  margin: -50px 0;
+}
+
+#login,
+#logout {
   color: white;
   transition: all 0.25s;
 }
 
-.navbar a:hover {
+#logout:hover,
+#login:hover {
   color: #4afdfe;
   text-decoration: none;
+  -webkit-transform: scale(1.2);
+  -moz-transform: scale(1.2);
+  -o-transform: scale(1.2);
+  transform: scale(1.2);
 }
 
-.nav-head {
+.navbar-brand {
   font-family: 'Russo One', sans-serif;
-}
-
-.navbar-light .navbar-brand {
   color: white !important;
   font-size: 32px;
   padding: 10px;
   text-shadow: 2px 2px #1a5cb1;
-  margin-left: 80px;
-
-}
-.bg-light {
-  background-color: rgba(0, 0, 0, 0.568)!important;
 }
 
 /*------------------------------------*/
-/* card style */
+/* Card Style */
 /*------------------------------------*/
-
 .sign-up-card {
   margin-right: 50px;
 }
@@ -58,10 +63,27 @@
   font-family: 'Russo One', sans-serif;
 }
 
-/*------------------------------------*/
-/* video style */
-/*------------------------------------*/
+#user-gotchi {
+  text-align: center;
+  font-family: 'Russo One', sans-serif;
+  font-size: 1.5em;
+}
 
+#gotchi-img {
+    width: 80%;
+    object-fit: cover;
+}
+
+.alert {
+  font-size: 0.75em;
+  text-align: center;
+  padding: 0.5em;
+  margin-bottom: 0.5em;
+}
+
+/*------------------------------------*/
+/* Video Style */
+/*------------------------------------*/
 #myVid {
   right: 0;
   bottom: 0;
@@ -78,25 +100,25 @@
 }
 
 /*------------------------------------*/
-/* button style */
+/* Button Style */
 /*------------------------------------*/
+.btn:focus {
+  box-shadow: none;
+}
 
 .btn-success {
   color:#02187a;
   background-color: #4afdfe;
   border-color: #1a5cb1;
+  margin-top: 1em;
+  transition: all 0.25s;
 }
 
-.btn-success:hover {
+.btn-success:hover,
+.btn:active {
   color: white;
-  background-color: #1a5cb1;
+  background-color: #1a5cb1 !important;
   border: none;
-  box-shadow: 3px 3px 4px #4afdfe;
-
-}
-
-#gotchi-img {
-    width: 100%;
-    height: 30vw;
-    object-fit: cover;
+  box-shadow: 0px 0px 10px 3px #4afdfe !important;
+  transform: scale(1.05)
 }
