--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -1,8 +1,15 @@
+
 <div class="container">
-  <div class="jumbotron mt-4">
-    <h1 class="display-4 text-center">404 Not Found
-      <span role="img" aria-label="Face with rolling eyes">🙄</span>
-    </h1>
-    <a href="/">← Back To Home</a>
-  </div>
+
+    {{!-- 404 Jumbotron Start --}}
+    <div class="jumbotron mt-5" id="errortron">
+        <h1 class="display-4 text-center">
+            <span role="img" aria-label="Face with rolling eyes">404 Not Found...🙄</span>
+        </h1>
+        <div class="text-center">
+            <a id="boot-btn" href="/">← Back To Home</a>
+        </div>
+    </div>
+    {{!-- 404 Jumbotron End --}}
+
 </div>
