--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -115,6 +115,7 @@
     </div>
 </div>
 
+{{!-- Scripts --}}
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="/js/index.js"></script>
 
